--- a/package.json
+++ b/package.json
@@ -32,6 +32,10 @@
     "webpack-dev-server": "^3.11.0"
   },
   "dependencies": {
-    "babel-polyfill": "^6.26.0"
+    "add": "^2.0.6",
+    "axios": "^0.20.0",
+    "babel-polyfill": "^6.26.0",
+    "node-fetch": "^2.6.1",
+    "yarn": "^1.22.5"
   }
 }
