--- a/package.json
+++ b/package.json
@@ -23,19 +23,17 @@
     "@babel/preset-env": "^7.11.5",
     "babel-loader": "^8.1.0",
     "core-js": "^3.6.5",
+    "css-loader": "^5.0.1",
     "html-webpack-plugin": "^4.4.1",
     "install": "^0.13.0",
+    "node-sass": "^5.0.0",
     "npm": "^6.14.8",
     "regenerator-runtime": "^0.13.7",
+    "sass-loader": "^10.1.0",
+    "style-loader": "^2.0.0",
     "webpack": "^4.44.1",
     "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.0"
   },
-  "dependencies": {
-    "add": "^2.0.6",
-    "axios": "^0.20.0",
-    "babel-polyfill": "^6.26.0",
-    "node-fetch": "^2.6.1",
-    "yarn": "^1.22.5"
-  }
+  "dependencies": {}
 }
